--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,5 @@
 spring.application.name=java-mid-test
-# spring.datasource.url=jdbc:sqlserver://sql-cap-test-eus2-poc.database.windows.net:1433;database=AdventureWorksLT;user=CloudSAc0e0f801@sql-cap-test-eus2-poc;password=My-Adm1n-Acct24;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-# spring.datasource.username=CloudSAc0e0f801
-# spring.datasource.password=My-Adm1n-Acct24
 spring.datasource.url=jdbc:sqlserver://sql-cap-test-eus2-poc.database.windows.net:1433;database=AdventureWorksLT;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;Authentication=ActiveDirectoryDefault
-# spring.datasource.username=4ca3d072-fa0f-4d1b-8997-fd4c3871077f
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.schema=SalesLT
 spring.jpa.show-sql=true
@@ -19,12 +15,15 @@ spring.main.allow-bean-definition-overriding=true
 
 azure.application-insights.instrumentation-key=6a1db6d6-5218-48c3-89e3-4b7ae1f6bc8b
 azure.application-insights.enabled=true
-# azuremonitor.instrumentationKey=6a1db6d6-5218-48c3-89e3-4b7ae1f6bc8b
 logging.level.root=INFO
-logging.level.org.springframework.web=DEBUG
-logging.level.com.mid.example.javamidtest=DEBUG
-logging.level.org.springframework.context=DEBUG
-# logging.config=./src/main/resources/log4j2.xml
-# logback.configurationFile=./src/main/resources/log4j2.xml
+logging.level.org.springframework.web=INFO
+logging.level.com.mid.example.javamidtest=INFO
+logging.level.org.springframework.context=INFO
 
-debug=true
+logging.config=logback.xml
+logback.configurationFile=logback.xml
+
+#debug=true
+
+# azure.tenantId=9ec6e2d0-6c2d-4b06-b014-daca41adf2fe
+# azure.clientid=4ca3d072-fa0f-4d1b-8997-fd4c3871077f
