--- a/DockerFile
+++ b/DockerFile
@@ -9,5 +9,6 @@ WORKDIR /app
 COPY /target /app/
 COPY /agent/applicationinsights-agent-3.5.2.jar /app/applicationinsights-agent-3.5.2.jar
 COPY /agent/applicationinsights.json /app/applicationinsights.json
+COPY /agent/logback.xml /app/logback.xml
 
 CMD ["java", "-javaagent:/app/applicationinsights-agent-3.5.2.jar", "-jar", "java-mid-test-0.0.1-SNAPSHOT.jar"]
